Fixed whitespacing at last. For now. Maybe

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 :root {
   --dark-background: #002b36;
+  --slighty-lighter-dark-background: #204b56;
   --subtly-light-background: #deeef2;
   --subtly-dark-background: #1d1603;
   --light-background: #fdf6e3;
